compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__blocks_get_preserved_when_needed2.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\npub fn main() {\n    fn(x) { 1 + x }(2) * 3\n}\n"
---
----- SOURCE CODE

pub fn main() {
    fn(x) { 1 + x }(2) * 3
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    (1 + 2) * 3.
