compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__do_not_inline_parameters_used_more_than_once.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\nimport testing\n\npub fn main() {\n  testing.always_inline(True)\n}\n"
---
----- SOURCE CODE

import testing

pub fn main() {
  testing.always_inline(True)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> boolean().
main() ->
    begin
        Something = true,
        case Something of
            true ->
                Something;

            false ->
                false
        end
    end.
