compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_anonymous_function_call.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\npub fn main() {\n  fn(a, b) { #(a, b) }(42, False)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  fn(a, b) { #(a, b) }(42, False)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> {integer(), boolean()}.
main() ->
    {42, false}.
