compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_function_which_calls_other_function.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\nimport testing\n\npub fn main() {\n  testing.always_inline(Ok(10), Error)\n}\n"
---
----- SOURCE CODE

import testing

pub fn main() {
  testing.always_inline(Ok(10), Error)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> {ok, any()} | {error, integer()}.
main() ->
    case {ok, 10} of
        {ok, Value} ->
            {error, Value};

        {error, Error} ->
            {error, Error}
    end.
