compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_function_with_use_and_anonymous.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\nimport gleam/bool\n\npub fn divide(a, b) {\n  use <- bool.lazy_guard(b == 0, fn() { panic as \"Cannot divide by 0\" })\n  a / b\n}\n"
---
----- SOURCE CODE

import gleam/bool

pub fn divide(a, b) {
  use <- bool.lazy_guard(b == 0, fn() { panic as "Cannot divide by 0" })
  a / b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([divide/2]).

-spec divide(integer(), integer()) -> integer().
divide(A, B) ->
    case B =:= 0 of
        true ->
            erlang:error(#{
                gleam_error => panic,
                message => ~"Cannot divide by 0",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"divide",
                line => 5
            });

        false ->
            case B of
                0 ->
                    0;

                _value ->
                    A div _value
            end
    end.
