compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_higher_order_function_anonymous.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\nimport gleam/result\n\npub fn main() {\n  result.try(Ok(10), fn(value) {\n    Ok({ value + 2 } * 4)\n  })\n}\n"
---
----- SOURCE CODE

import gleam/result

pub fn main() {
  result.try(Ok(10), fn(value) {
    Ok({ value + 2 } * 4)
  })
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> {ok, integer()} | {error, any()}.
main() ->
    case {ok, 10} of
        {ok, Value} ->
            {ok, (Value + 2) * 4};

        {error, Error} ->
            {error, Error}
    end.
