compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_shadowed_variable_nested.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\npub fn sum(a, b) {\n  fn(x) {\n    let a = 7\n    fn(y) {\n      let a = 10\n      y - a\n    }(x + a)\n\n    a\n  }(a + b)\n\n  a\n}\n"
---
----- SOURCE CODE

pub fn sum(a, b) {
  fn(x) {
    let a = 7
    fn(y) {
      let a = 10
      y - a
    }(x + a)

    a
  }(a + b)

  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([sum/2]).

-spec sum(integer(), integer()) -> integer().
sum(A, B) ->
    begin
        _inline_a_0 = 7,
        begin
            _inline_a_1 = 10,
            ((A + B) + _inline_a_0) - _inline_a_1
        end,
        _inline_a_0
    end,
    A.
